--- a/FormABC.resx
+++ b/FormABC.resx
@@ -168,4 +168,7 @@
         vZFeRUyWWJdqqAil2C5BYLsTdsjjVCivWlJ+wS8l/wClM8anFfWG/P8ARHeq3y0UUV48tz2T/9k=
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>25</value>
+  </metadata>
 </root>
